[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/dialogs/TutorialDialog.gd" type="Script" id=1]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/HBoxContainer/VBoxMedia/HBoxMediaAnchor:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/HBoxContainer/VBoxMedia/HBoxMediaAnchor:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer/RichTextLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VBoxContainer/RichTextLabel:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 69 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "fade_in"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/HBoxContainer/VBoxMedia/HBoxMediaAnchor:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/HBoxContainer/VBoxMedia/HBoxMediaAnchor:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 16, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "fade_in_right_to_left"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/HBoxContainer/VBoxMedia/HBoxMediaAnchor:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/HBoxContainer/VBoxMedia/HBoxMediaAnchor:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 16, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer/RichTextLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VBoxContainer/RichTextLabel:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 16, 69 ), Vector2( 0, 69 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "fade_out_right_to_left"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/HBoxContainer/VBoxMedia/HBoxMediaAnchor:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/HBoxContainer/VBoxMedia/HBoxMediaAnchor:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -16, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer/RichTextLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VBoxContainer/RichTextLabel:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 0, 69 ), Vector2( -16, 69 ) ]
}

[node name="TutorialDialog" type="PopupDialog"]
visible = true
margin_right = 730.0
margin_bottom = 500.0
focus_mode = 2
mouse_filter = 1
input_pass_on_modal_close_click = false
popup_exclusive = true
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 2.0

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 730.0
margin_bottom = 55.0
mouse_filter = 1
text = "DIALOG_TUTORIAL_TITLE"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 59.0
margin_right = 730.0
margin_bottom = 61.0
mouse_filter = 1

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 69.0
margin_right = 730.0
margin_bottom = 147.0
rect_min_size = Vector2( 0, 40 )
mouse_filter = 1
bbcode_enabled = true
text = "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore. "
fit_content_height = true
scroll_active = false

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 147.0
margin_right = 730.0
margin_bottom = 167.0
mouse_filter = 1
custom_constants/separation = 20
custom_styles/separator = SubResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 171.0
margin_right = 730.0
margin_bottom = 471.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1

[node name="PreviousButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_top = 120.0
margin_right = 60.0
margin_bottom = 180.0
rect_min_size = Vector2( 60, 60 )
focus_mode = 1
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 4
text = "<"

[node name="VBoxMedia" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 90.0
margin_right = 640.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="HBoxMediaAnchor" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxMedia"]
margin_right = 550.0
margin_bottom = 300.0
size_flags_vertical = 3
alignment = 1

[node name="VideoPlayer" type="VideoPlayer" parent="VBoxContainer/HBoxContainer/VBoxMedia/HBoxMediaAnchor"]
unique_name_in_owner = true
margin_left = 25.0
margin_right = 525.0
margin_bottom = 300.0
rect_min_size = Vector2( 500, 300 )
mouse_filter = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxMedia/HBoxMediaAnchor"]
unique_name_in_owner = true
visible = false
margin_left = 504.0
margin_right = 1004.0
margin_bottom = 300.0
rect_min_size = Vector2( 500, 300 )
expand = true

[node name="NextButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 670.0
margin_top = 120.0
margin_right = 730.0
margin_bottom = 180.0
rect_min_size = Vector2( 60, 60 )
focus_mode = 1
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 4
text = ">"
__meta__ = {
"_editor_description_": ""
}

[node name="PageLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 475.0
margin_right = 730.0
margin_bottom = 513.0
mouse_filter = 1
theme_type_variation = "LabelSubtitle"
text = "1/x"
align = 1

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/fade_in = SubResource( 8 )
anims/fade_in_right_to_left = SubResource( 9 )
anims/fade_out_right_to_left = SubResource( 10 )

[connection signal="meta_clicked" from="VBoxContainer/RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PreviousButton" to="." method="_on_PreviousButton_pressed"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/VBoxMedia" to="." method="_on_VBoxMedia_gui_input"]
[connection signal="finished" from="VBoxContainer/HBoxContainer/VBoxMedia/HBoxMediaAnchor/VideoPlayer" to="." method="_on_VideoPlayer_finished"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]
